--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "type": "chrome",
             "url": "http://localhost:8080",
-            "webRoot": "c\\Users\12099\Desktop\bay-valley-tech\code-folder\login_UI_first_draft.html"
+            "webRoot": "c\\Users\12099\Desktop\bay-valley-tech\code-folder\login_UI_first`_draft.html"
         }
     ]
 }
